<resources>
    <string name="app_name">Delete Files</string>
    <string name="action_settings">Settings</string>
    <string name="please_grant_permissions_for_external_storage">Please grant permissions for external storage</string>
    <string name="activate">Activate</string>
    <string name="delete_all_files">Delete All</string>
    <string name="all_files_will_be_deleted">All files will be deleted</string>
    <string name="runned_notification_content">Hope you are ok :)</string>
    <string name="runned_notification_title">Files deleted</string>
    <string name="none">None</string>
    <string name="allowed_trigger_app_summary">Select which app is authorized to send panic alerts</string>
    <string name="allowed_trigger_app">Allowed trigger app</string>
    <string name="runned_notification">Notify run complete</string>
    <string name="runned_notification_summary">Shows a notification after a trigger run</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="disable">Disable</string>
    <string name="delete">Delete</string>
    <string name="confirm_deletion">Confirm deletion</string>

    <string name="pref_trigger_app" translatable="false">pref_trigger_app</string>
    <string name="pref_runned_notification" translatable="false">pref_runned_notification</string>
    <string name="pref_delete_all" translatable="false">pref_delete_all</string>
</resources>
